--- a/src/main/resources/assets/warpdrive/lang/zh_TW.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_TW.lang
@@ -16,29 +16,29 @@ death.attack.warpdrive.warm.player=%2$s 把 %1$s 變成了綠色香蕉
 
 itemGroup.warpdrive=WarpDrive
 
-item.warpdrive.crafting.Malformed.name=不良道具[WD]
-item.warpdrive.crafting.EmeraldCrystal.name=翡翠調諧水晶
-item.warpdrive.crafting.EnderCrystal.name=終界調諧水晶
-item.warpdrive.crafting.DiamondCrystal.name=鑽石調諧水晶
-item.warpdrive.crafting.DiffractionGrating.name=散射光柵
-item.warpdrive.crafting.ReactorCore.name=反應核心
-item.warpdrive.crafting.ComputerInterface.name=電腦接入界面
-item.warpdrive.crafting.PowerInterface.name=電力接口
-item.warpdrive.crafting.CapacitiveCrystal.name=電容結晶
-item.warpdrive.crafting.AirCanisterEmpty.name=虛空罐
-item.warpdrive.crafting.AirCanisterEmpty.tooltip=§b右鍵單擊空氣發生器§7 填充虛空罐
-item.warpdrive.crafting.Lens.name=透鏡
-item.warpdrive.crafting.Zoom.name=放大
-item.warpdrive.crafting.GlassTank.name=玻璃罐子
-item.warpdrive.crafting.FlatScreen.name=平面屏幕
-item.warpdrive.crafting.MemoryCrystal.name=記憶水晶
-item.warpdrive.crafting.Motor.name=發動機
-item.warpdrive.crafting.BoneCharcoal.name=骨灰
-item.warpdrive.crafting.ActivatedCarbon.name=活性炭
-item.warpdrive.crafting.LaserMediumEmpty.name=激光觸媒 (空)
-item.warpdrive.crafting.CoilCrystal.name=回紋水晶
-item.warpdrive.crafting.ElectromagneticProjector.name=電磁投射器
-item.warpdrive.crafting.Superconductor.name=超導材料
+item.warpdrive.component.malformed.name=不良道具[WD]
+item.warpdrive.component.emerald_crystal.name=翡翠調諧水晶
+item.warpdrive.component.ender_crystal.name=終界調諧水晶
+item.warpdrive.component.diamond_crystal.name=鑽石調諧水晶
+item.warpdrive.component.diffraction_grating.name=散射光柵
+item.warpdrive.component.reactor_core.name=反應核心
+item.warpdrive.component.computer_interface.name=電腦接入界面
+item.warpdrive.component.power_interface.name=電力接口
+item.warpdrive.component.capacitive_crystal.name=電容結晶
+item.warpdrive.component.air_canister_empty.name=虛空罐
+item.warpdrive.component.air_canister_empty.tooltip=§b右鍵單擊空氣發生器§7 填充虛空罐
+item.warpdrive.component.lens.name=透鏡
+item.warpdrive.component.zoom.name=放大
+item.warpdrive.component.glass_tank.name=玻璃罐子
+item.warpdrive.component.flat_screen.name=平面屏幕
+item.warpdrive.component.memory_crystal.name=記憶水晶
+item.warpdrive.component.motor.name=發動機
+item.warpdrive.component.bone_charcoal.name=骨灰
+item.warpdrive.component.activated_carbon.name=活性炭
+item.warpdrive.component.laser_medium_empty.name=激光觸媒 (空)
+item.warpdrive.component.coil_crystal.name=回紋水晶
+item.warpdrive.component.electromagnetic_projector.name=電磁投射器
+item.warpdrive.component.superconductor.name=超導材料
 
 item.warpdrive.armor.helmet.name=躍遷保護盔
 item.warpdrive.armor.chestplate.name=Warp Chestplate
@@ -563,23 +563,23 @@ tile.warpdrive.hull3.stairs.black.name=黑色高階船體階梯
 
 
 warpdrive.guide.prefix=§6%1$s:§r 
-warpdrive.error.badTileEntity=§c該塊需要重新放置。
-warpdrive.monitor.viewingCamera=查看攝影機 %2$d, %3$d, %4$d 在視頻頻道 %1$d
-warpdrive.ship.attachedPlayers=屬於: %1$s
-warpdrive.ship.playerAttached=您現在已連接到船艦 %1$s.\n這艘船艦屬於 %2$s
-warpdrive.ship.playerDetached=您現在已從船艦分離 %1$s.\n這艘船艦屬於 %2$s
+warpdrive.error.bad_tile_entity=§c該塊需要重新放置。
+warpdrive.monitor.viewing_camera=查看攝影機 %2$d, %3$d, %4$d 在視頻頻道 %1$d
+warpdrive.ship.attached_players=屬於: %1$s
+warpdrive.ship.player_attached=您現在已連接到船艦 %1$s.\n這艘船艦屬於 %2$s
+warpdrive.ship.player_detached=您現在已從船艦分離 %1$s.\n這艘船艦屬於 %2$s
 warpdrive.ship.status_line.cooling=%1$d s 升降梯的冷卻中。
 warpdrive.ship.status_line.isolation=%1$d 主動隔離塊由 %2$2.1f%% 吸收。
 
 warpdrive.energy.status_line=能量填充 %1$s / %2$s EU.
-warpdrive.energy.side.changedToInput=%1$s 側面變為能量輸入模式!
-warpdrive.energy.side.changedToOutput=%1$s 側面變為能量輸出模式!
-warpdrive.energy.side.changedToDisabled=%1$s 側面變為能量禁用模式!
+warpdrive.energy.side.changed_to_input=%1$s 側面變為能量輸入模式!
+warpdrive.energy.side.changed_to_output=%1$s 側面變為能量輸出模式!
+warpdrive.energy.side.changed_to_disabled=%1$s 側面變為能量禁用模式!
 
-warpdrive.accelerator.guide.lowPower_noStorage=Energy storage is too low; we need at least %1$d to continue operation but can only store %2$d
-warpdrive.accelerator.guide.lowPower_accelerating=We're running out of power chief, particles are on the loose, prepare for massive irradiation!
-warpdrive.accelerator.guide.lowPower_noParticles=We need more power to start the accelerator!
-warpdrive.accelerator.guide.noChiller=No chiller could be found for this accelerator!
+warpdrive.accelerator.guide.low_power.not_enough_storage=Energy storage is too low; we need at least %1$d to continue operation but can only store %2$d
+warpdrive.accelerator.guide.low_power.accelerating=We're running out of power chief, particles are on the loose, prepare for massive irradiation!
+warpdrive.accelerator.guide.low_power.no_particles=We need more power to start the accelerator!
+warpdrive.accelerator.guide.no_chiller=No chiller could be found for this accelerator!
 
 warpdrive.beam_frequency.tooltip=光束頻率設置為 %1$d
 warpdrive.beam_frequency.get=Beam frequency %2$d has been retrieved from %1$s
@@ -600,7 +600,7 @@ warpdrive.control_channel.status_line.valid=Control channel %1$d is valid.
 warpdrive.control_channel.status_line.invalid=§cControl channel %1$d is invalid.
 warpdrive.control_channel.status_line.undefined=§7Undefined Control channel.\n§bUse a Tuning fork§r to set it.
 
-warpdrive.forcefield.guide.lowPower=我們的能量用完了，艦長！減少消耗，或讓引擎長提高我們的輸出！
+warpdrive.forcefield.guide.low_power=我們的能量用完了，艦長！減少消耗，或讓引擎長提高我們的輸出！
 
 warpdrive.forcefield.shape.status_line.none=§c形狀未定義。
 warpdrive.forcefield.shape.status_line.double=形狀是滿的 %1$s
@@ -641,22 +641,22 @@ warpdrive.particle.antimatter.tooltip=Produced by colliding a particle bunch in 
 warpdrive.particle.strange_matter.name=strange matter
 warpdrive.particle.strange_matter.tooltip=Produced by colliding 2 particle bunches in a superior accelerator
 
-warpdrive.upgrade.result.noUpgradeToDismount=§c無需升級即可卸載。
-warpdrive.upgrade.result.notEnoughUpgrades=§c您需要至少1個才能升級此塊。
-warpdrive.upgrade.result.invalidUpgrade=§c這不是升級此方塊的有效項。
-warpdrive.upgrade.result.invalidProjectorUpgrade=§c此升級對於投射器而言太大，請改用繼電器。
-warpdrive.upgrade.result.invalidRelayUpgrade=§c此升級僅適用於投射器。
-warpdrive.upgrade.result.validUpgrades=此方塊塊的有效升級包括: %1$s. @TODO 尚未執行。
-warpdrive.upgrade.result.tooManyUpgrades=§c已經有 %1$d 升級安裝。
+warpdrive.upgrade.result.no_upgrade_to_dismount=§c無需升級即可卸載。
+warpdrive.upgrade.result.not_enough_upgrades=§c您需要至少1個才能升級此塊。
+warpdrive.upgrade.result.invalid_upgrade=§c這不是升級此方塊的有效項。
+warpdrive.upgrade.result.invalid_upgrade_for_projector=§c此升級對於投射器而言太大，請改用繼電器。
+warpdrive.upgrade.result.invalid_upgrade_for_relay=§c此升級僅適用於投射器。
+warpdrive.upgrade.result.valid_upgrades=此方塊塊的有效升級包括: %1$s. @TODO 尚未執行。
+warpdrive.upgrade.result.too_many_upgrades=§c已經有 %1$d 升級安裝。
 warpdrive.upgrade.result.dismounted=升級 %1$s 成功卸下。
 warpdrive.upgrade.result.mounted=升級 %1$s 已成功掛載。
 
-warpdrive.upgrade.result.wrongShapeSide=§c這邊沒有電磁投射器。
-warpdrive.upgrade.result.noShapeToDismount=§c沒有形狀來卸下。
-warpdrive.upgrade.result.notEnoughShapes.double=§c您需要至少2個項目來設置雙面投射器的形狀。
-warpdrive.upgrade.result.notEnoughShapes.single=§c至少需要1個項目來設置單面投射器的形狀。
-warpdrive.upgrade.result.shapeDismounted=已成功卸載形狀。
-warpdrive.upgrade.result.shapeMounted=形狀已成功安裝。
+warpdrive.upgrade.result.wrong_shape_side=§c這邊沒有電磁投射器。
+warpdrive.upgrade.result.no_shape_to_dismount=§c沒有形狀來卸下。
+warpdrive.upgrade.result.not_enough_shapes.double=§c您需要至少2個項目來設置雙面投射器的形狀。
+warpdrive.upgrade.result.not_enough_shapes.single=§c至少需要1個項目來設置單面投射器的形狀。
+warpdrive.upgrade.result.shape_dismounted=已成功卸載形狀。
+warpdrive.upgrade.result.shape_mounted=形狀已成功安裝。
 
 warpdrive.upgrade.status_line.none=§7未安裝升級。
 warpdrive.upgrade.status_line.valid=已升級 %1$s.
@@ -665,21 +665,21 @@ warpdrive.video_channel.tooltip=視頻頻道設置為 %1$d
 warpdrive.video_channel.get=Video channel %2$d has been retrieved from %1$s
 warpdrive.video_channel.set=%1$s 現在調整為視頻頻道 %2$d
 warpdrive.video_channel.status_line.valid_camera=視頻頻道 %1$d 有效。
-warpdrive.video_channel.status_line.validCamera視頻頻道 %1$d 對於攝像機 %2$d, %3$d, %4$d 有效
+warpdrive.video_channel.status_line.valid_monitor=視頻頻道 %1$d 對於攝像機 %2$d, %3$d, %4$d 有效
 warpdrive.video_channel.status_line.invalid=§c視頻頻道 %1$d 是無效的。
 warpdrive.video_channel.status_line.not_loaded=§c視頻頻道 %1$d 是無效的或者錄像機太過遙遠。
 warpdrive.video_channel.status_line.undefined=§7未定義的視頻通道。\n§bUse 調音叉§r 來設定。
 
-warpdrive.cloaking_core.missingInnerAndOuter=§cIntegrity down to %1$d%%: missing channeling coil(s) towards %2$s and projecting coil(s) towards %3$s
-warpdrive.cloaking_core.missingInner=§cIntegrity down to %1$d%%: missing channeling coil(s) towards %2$s
-warpdrive.cloaking_core.missingOuter=§cIntegrity down to %1$d%%: missing projecting coil(s) towards %2$s
+warpdrive.cloaking_core.missing_channeling_and_projecting_coils=§cIntegrity down to %1$d%%: missing channeling coil(s) towards %2$s and projecting coil(s) towards %3$s
+warpdrive.cloaking_core.missing_channeling_coils=§cIntegrity down to %1$d%%: missing channeling coil(s) towards %2$s
+warpdrive.cloaking_core.missing_projecting_coils=§cIntegrity down to %1$d%%: missing projecting coil(s) towards %2$s
 warpdrive.cloaking_core.valid=System is valid
 warpdrive.cloaking_core.disabled=僞裝無效！
-warpdrive.cloaking_core.lowPower=§c僞裝失效了，我們需要更多的能量！艦長！
+warpdrive.cloaking_core.low_power=§c僞裝失效了，我們需要更多的能量！艦長！
 warpdrive.cloaking_core.cloaking=A 層 %1$d 僞裝目前正確覆蓋 %2$d 區域！
 
-warpdrive.ic2_reactor_laser_monitor.noReactor=沒有反應堆！
-warpdrive.ic2_reactor_laser_monitor.multipleReactors=%1$d 反應器連接。
+warpdrive.ic2_reactor_laser_monitor.no_reactor=沒有反應堆！
+warpdrive.ic2_reactor_laser_monitor.reactor_found=Reactor connected on %1$s.
 
 warpdrive.transporter.status=From (%1$.0f %2$.0f %3$.0f) to (%4$.0f %5$.0f %6$.0f)
 warpdrive.transporter_beacon.status.invalid=§cNo transporter room linked
