--- a/src/main/resources/assets/warpdrive/lang/nl_NL.lang
+++ b/src/main/resources/assets/warpdrive/lang/nl_NL.lang
@@ -571,7 +571,7 @@ warpdrive.ship.attached_players=Aangesloten Spelers: %1$s
 warpdrive.ship.player_attached=Je bent nu aangesloten op schip %1$s.\nDe aangesloten spelers zijn %2$s
 warpdrive.ship.player_detached=Je bent nu afgesloten op schip %1$s.\nDe aangesloten spelers zijn %2$s
 warpdrive.ship.status_line.cooling=%1$d seconden over van afkoeling
-warpdrive.ship.status_line.isolation=%1$d actieve isolatie-blokken geven %2$2.1f%% absorptie.
+warpdrive.ship.status_line.isolation=%1$d actieve isolatie-blokken geven %2$s%% absorptie.
 
 warpdrive.energy.status_line=Energielevel is op %1$s / %2$s EU.
 warpdrive.energy.side.changed_to_input=%1$s kant verandert naar energie input modus!
